<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="number_zero">0</string>
    <string name="select_city">请选择一个城市</string>
    <string name="city_before">上一个</string>
    <string name="city_next">下一个</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_add">+</string>
    <string name="btn_less">-</string>
    <string name="btn_chu">/</string>
    <string name="btn_cheng">*</string>
    <string name="login_str">提交登陆</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="app_name">男人装</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_woman">Woman</string>
    <string name="title_rank">排行榜</string>
    <string name="title_choice">评选</string>
    <string name="title_signup">报名</string>
    <string name="title_activity_login">Login</string>
    <string name="default_img_des">图片</string>

    <!-- 登陆注册 -->
    <string name="login_title">登陆  / 注册</string>
    <string name="login_goddess">女神帐号登陆</string>
    <string name="login_weibo">微博帐号登陆</string>
    <string name="register">注册</string>

    <!-- 创建角色 -->
    <string name="role_title">填写必要资料</string>
    <string name="rolename_input_hint">请输入昵称，保存后不可更改</string>
    <string name="sex_girl_txt">女</string>
    <string name="sex_boy_txt">男</string>
    <string name="role_sex_des">性别保存后不可更改</string>
    <string name="role_submit_btn">保存并开始使用</string>
    <string name="role_create_success">角色创建成功</string>

    <!-- woman rank使用 -->
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>

    <!-- 装女郎报名 -->
    <string name="sign_title">装女郎报名</string>
    <string name="sign_submite_success">报名成功</string>

    <!-- title -->
    <string name="title_submit">提交</string>
    <string name="title_release">发布</string>

    <!-- 搜索页头 -->
    <string name="search_hint">搜索</string>
    <string name="attention_txt">关注</string>
    <string name="search_button_txt">搜索</string>
    <string name="search_alert_no_keyword">请输入搜索关键字</string>

    <!-- 常用的错误提示 -->
    <string name="base_response_error">网络请求返回错误</string>
    <string name="base_user_session_empty">用户可能已过期，请尝试重新登陆</string>
    <string name="rank_empty">排行榜暂无数据</string>

    <!-- 操作成功 -->
    <string name="req_vote_success">投票成功</string>
    <string name="give_score_success">赠送积分成功</string>
    <string name="title_activity_vote_after">VoteAfter</string>
    <string name="sanwei_1">胸围</string>
    <string name="sanwei_2">腰围</string>
    <string name="sanwei_3">臀围</string>

    <!-- 文字提示，在装女郎pk中用 -->
    <string name="girlname">姓名:</string>
    <string name="girlage">年龄:</string>
    <string name="girlxingzuo">星座:</string>
    <string name="girlsanwei">三围:</string>

    <!-- 文字提示，在装女郎pk后对应的女郎详细页里使用 -->
    <string name="girlmore">更多照片</string>
    <string name="girlgivescore">送她积分</string>
    <string name="girlnext">  下一组  </string>

    <!-- 任务 -->
    <string name="task_title">我的任务</string>
    <string name="title_activity_login_b">LoginB</string>

    <!-- 树洞 -->
    <string name="tree_title">树洞</string>

    <!-- 树洞详情 -->
    <string name="tree_info_title">TA的小秘密</string>
    <string name="tree_repeat_hint">回复楼主</string>
    <string name="tree_repeat_submit">发布</string>
    <string name="tree_write_answer">评论发表成功</string>
    <string name="tree_support_answer_success">支持成功</string>
    <string name="tree_dissupport_success">不支持成功</string>
    <string name="title_activity_comment">Comment</string>
    <string name="tree_write_title">发布秘密</string>
    <string name="tree_write_nick_hint">请输入临时昵称</string>
    <string name="tree_write_content_hint">请输入秘密内容</string>
    <string name="tree_write_nick_tip">请输入临时昵称</string>
    <string name="tree_write_content_tip">请输入秘密内容</string>
    <string name="tree_write_success">发布秘密成功</string>

    <!-- 评论 -->
    <string name="comment_txt">评论</string>
    <string name="comment_reply_txt">发表</string>

    <!-- 关注的人 -->
    <string name="atten_title">关注的人</string>

    <!-- 撰写文章 -->
    <string name="write_article_title">撰写文章</string>
    <string name="write_article_title_hint">请输入文章标题</string>
    <string name="write_article_hint">在这里写文章内容</string>
    <string name="write_article_submite_success">您撰写的文章发布成功</string>

    <!-- 装女郎申请 -->
    <string name="girl_apply_submit_success">您已成功提交申请</string>

    <!-- 底部菜单按钮 -->
    <string name="bottom_menu_photo">拍照</string>
    <string name="bottom_menu_albums">图库相册</string>
    <string name="bottom_menu_exit">取消</string>
    <string name="bottom_menu_editTxt">编辑描述文字</string>

    <!-- 个人中心 -->
    <string name="person_title">TA的主页</string>
    <string name="upload_img_success">上传图片成功</string>
    <string name="sign_txt">签到</string>
    <string name="sign_has_txt">已签到</string>
    <string name="sign_req_success">签到成功</string>
    <string name="atten_txt">关注</string>
    <string name="atten_has_txt">已关注</string>
    <string name="atten_req_success">关注成功</string>
    <string name="atten_cancel_req_success">取消关注成功</string>
    <string name="title_activity_photo_album">PhotoAlbum</string>
    <string name="hello_world">Hello world!</string>

    <!-- 相册 -->
    <string name="photo_album_title">相册</string>
    <string name="album_name_hint">请输入相册名字</string>
    <string name="album_name_submit">确定</string>
    <string name="album_name_null">请输入相册名字</string>
    <string name="create_album_success">创建相册成功</string>
    <string name="del_album_success">删除相册成功</string>

    <!-- 照片 -->
    <string name="photo_title">照片</string>
    <string name="photo_des_hit">请输入照片描述</string>
    <string name="photo_des_submit">确定</string>
    <string name="add_photo_success">添加照片成功</string>
    <string name="del_photo_success">删除照片成功</string>

    <!-- 我的收藏 -->
    <string name="collect_title">我的收藏</string>

    <!-- 个人中心相册 -->
    <string name="woman_photo_title">她的相册</string>
    <string name="title_activity_create_role">CreateRole</string>

    <!-- 男人帮 -->
    <string name="man_show_all">显示全部</string>
    <string name="man_txt_up">收起文字</string>
    <string name="title_activity_tree_write">TreeWrite</string>

</resources>