<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/role_sex_conrner"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/role_sex_boy"
            style="@style/role_sex_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#007FFA"
            android:text="@string/sex_boy_txt"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/role_sex_girl"
            style="@style/role_sex_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_girl_txt" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/role_sex_des"
        android:textColor="#b1b1b1"
        android:textStyle="bold"
        android:textSize="14sp" />

</LinearLayout>