<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginB" >

    <ImageView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome"/>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">
        
        <Button 
            android:id="@+id/goddess_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            style="@style/loginb_txt"
            android:text="@string/login_goddess"/>
        
        <Button 
            android:id="@+id/weibo_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            style="@style/loginb_txt"
            android:text="@string/login_weibo"/>
        
        <Button 
            android:id="@+id/register_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            style="@style/register_txt"
            android:text="@string/register"/>
    </LinearLayout>

</RelativeLayout>
