<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.app.man"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VoteAfter" >

    <!-- 容器 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <!-- 图片 -->

        <com.app.view.NetImageView
            android:id="@+id/vote_after_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_img" />

        <!-- 信息容器 -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <!-- 背景 -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="#000" >
            </RelativeLayout>

            <!-- 信息 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vote_after_name"
                        style="@style/vote_after_left_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/girlname" />

                    <TextView
                        android:id="@+id/vote_after_age"
                        style="@style/vote_after_left_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/girlage" />

                    <TextView
                        android:id="@+id/vote_after_xingzuo"
                        style="@style/vote_after_left_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/girlxingzuo" />

                    <TextView
                        android:id="@+id/vote_after_sanwei"
                        style="@style/vote_after_left_text"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/girlsanwei" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/vote_after_more"
                        style="@style/vote_after_right_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="5dp"
                        android:text="@string/girlmore" />

                    <TextView
                        android:id="@+id/vote_after_givescore"
                        style="@style/vote_after_right_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="5dp"
                        android:text="@string/girlgivescore" />

                    <TextView
                        android:id="@+id/vote_after_next"
                        style="@style/vote_after_right_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/girlnext" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <com.app.view.FootView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android_custom:currentTab="woman" >
    </com.app.view.FootView>

</LinearLayout>